fixing borders and animation

--- a/src/app/components/styles/AboutMe.module.scss
+++ b/src/app/components/styles/AboutMe.module.scss
@@ -119,7 +119,8 @@
             justify-content: center;
   
             .iconCard {
-              background-color: #2e293a;
+              background-color: #352f36;
+              border: 2px solid #2e293a;
               border-radius: 1rem;
               padding: 1rem 1.5rem;
               display: flex;
