--- a/src/app/components/styles/EducationCard.module.scss
+++ b/src/app/components/styles/EducationCard.module.scss
@@ -1,15 +1,17 @@
 .card {
     background-color: #352F36;
-    border: 1px solid #eaeaea;
+    border: 2px solid #2e293a;
     border-radius: 16px;
     padding: 20px;
-    box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 15px #2e293a;
     transition: all 0.3s ease;
     width: 400px;
     margin: 0 auto;
   
     &:hover {
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+        transform: translateY(-5px) scale(1.05);
+        box-shadow: 0 0 25px #352f36;
+        color: #ff4c4c;
     }
   }
   
