Adding Experience section

--- a/src/app/components/styles/EducationCard.module.scss
+++ b/src/app/components/styles/EducationCard.module.scss
@@ -51,13 +51,13 @@
     flex-wrap: wrap;
     gap: 10px;
     font-size: 0.9rem;
-    color: #000;
+    color: #fff;
     margin-top: 10px;
     align-items: center;
   }
   
   .subject {
-    background: #f1f1f1;
+    background: #2e293a;
     padding: 4px 10px;
     border-radius: 12px;
     display: flex;
