--- a/src/app/components/styles/ExperiencePopup.module.scss
+++ b/src/app/components/styles/ExperiencePopup.module.scss
@@ -43,11 +43,24 @@
   
     ul {
       margin: 1rem 0;
-      padding-left: 1.2rem;
+      padding: 0;
   
       li {
+        display: flex;
+        align-items: flex-start;
         margin-bottom: 0.5rem;
+        list-style: none;
+  
+        span {
+          margin-left: 0.5rem;
+        }
       }
+    }
+  
+    .bulletIcon {
+      font-size: 0.5rem;
+      color: #ff4c4c; // matches your button color
+      margin-top: 0.50rem;
     }
   
     .visitBtn {
@@ -63,3 +76,4 @@
       }
     }
   }
+  
