--- a/src/app/components/styles/ExperienceCard.module.scss
+++ b/src/app/components/styles/ExperienceCard.module.scss
@@ -18,6 +18,7 @@
     display: flex;
     gap: 1rem;
     margin-top: 1rem;
+    justify-content: space-between;
 
     button {
       background: #ff4c4c;
