--- a/src/app/components/styles/ProjectCard.module.scss
+++ b/src/app/components/styles/ProjectCard.module.scss
@@ -1,38 +1,51 @@
 .card {
   background-color: #352f36;
   border: 2px solid #2e293a;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
   padding: 1.5rem;
   border-radius: 12px;
   box-shadow: 0 0 15px #2e293a;
-  color: white;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   .image {
     border-radius: 8px;
     margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   h3 {
+    font-size: 1.4rem;
     color: #fff;
-    margin-bottom: 0.5rem;
   }
+}
 
-  .buttons {
-    display: flex;
-    gap: 1rem;
-    margin-top: 1rem;
+.buttons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+  justify-content: space-between;
 
-    button {
-      background: #ff4c4c;
-      color: white;
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s ease;
+  button {
+    background: #ff4c4c;
+    color: white;
+    border: none;
+    padding: 0.6rem 1.2rem;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 
-      &:hover {
-        background: #ff3333;
-      }
+    &:hover {
+      background: #ff3333;
     }
   }
 }
