--- a/src/app/components/styles/ProjectModal.module.scss
+++ b/src/app/components/styles/ProjectModal.module.scss
@@ -25,12 +25,12 @@
   
     .close {
       position: absolute;
-      right: 1rem;
       top: 1rem;
-      background: none;
-      border: none;
+      right: 1rem;
+      background: transparent;
       color: white;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
+      border: none;
       cursor: pointer;
     }
   
