--- a/src/app/components/styles/EducationCard.module.scss
+++ b/src/app/components/styles/EducationCard.module.scss
@@ -91,6 +91,7 @@
   @media screen and (max-width: 480px) {
     .card {
       padding: 14px;
+      margin-left: -8px;
     }
   
     .institution {
