--- a/src/app/components/styles/AboutMe.module.scss
+++ b/src/app/components/styles/AboutMe.module.scss
@@ -73,9 +73,9 @@
   
         h2 {
           font-size: 2.5rem;
-          margin-bottom: 1rem;
-          color: #ffffff;
-
+          margin-bottom: 3rem;
+          font-weight: 600;
+          color: #fff;
           .name{
             color: #ff4c4c;
           }
