--- a/src/app/components/styles/Education.module.scss
+++ b/src/app/components/styles/Education.module.scss
@@ -5,9 +5,11 @@
     text-align: center;
   
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 2rem;
+      font-size: 2.5rem;
+      margin-bottom: 3rem;
+      font-weight: 600;
       color: #ff4c4c;
+      text-align: center;
     }
   
     .cardWrapper {
