--- a/src/app/components/styles/Research.module.scss
+++ b/src/app/components/styles/Research.module.scss
@@ -81,8 +81,9 @@
   padding: 2rem;
 
   h1 {
-    font-size: 2.2rem;
-    margin-bottom: 2rem;
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+    font-weight: 600;
     color: #ff4c4c;
     text-align: center;
   }
