--- a/src/app/components/styles/Skills.module.scss
+++ b/src/app/components/styles/Skills.module.scss
@@ -6,10 +6,11 @@
     padding: 2rem;
   
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 2rem;
-      color: #ff4c4c;
-      text-align: center;
+        font-size: 2.5rem;
+        margin-bottom: 3rem;
+        font-weight: 600;
+        color: #ff4c4c;
+        text-align: center;
     }
   }
 
