--- a/src/app/components/styles/HomeSection.module.scss
+++ b/src/app/components/styles/HomeSection.module.scss
@@ -3,7 +3,7 @@
     width: 0ch;
   }
   to {
-    width: 13ch;
+    width: 9ch;
   }
 }
 
@@ -49,12 +49,25 @@
     width: 100%;
     flex-wrap: wrap;
 
+    .introLine {
+      font-size: 3rem;
+      font-weight: 600;
+      line-height: 1.4;
+      color: white;
+    
+      @media screen and (max-width: 768px) {
+        font-size: 2rem;
+        text-align: center;
+      }
+    }
+    
+
     .text {
       flex: 1 1 500px;
 
       h1 {
-        font-size: 3.5rem;
-        font-weight: 700;
+        font-size: 3rem;
+        font-weight: 600;
         margin-bottom: 1.5rem;
 
         .highlight {
