--- a/src/app/components/styles/AboutMe.module.scss
+++ b/src/app/components/styles/AboutMe.module.scss
@@ -96,7 +96,7 @@
       .funFact {
         font-style: italic;
         font-size: 1.1rem;
-        color: #ff6f6f; // Muted grey-blue, easy on the eyes
+        color: #ff6f6f;
         margin: 1rem 0;
         position: relative;
         padding-left: 1.5rem;
